Fix MSKINS-12: Internet Explorer 9 shows scrollbar on <div id=navcolumn>
git-svn-id: https://svn.apache.org/repos/asf/maven/skins/trunk@1222957 13f79535-47bb-0310-9956-ffa450edef68

--- a/maven-default-skin/src/main/resources/css/maven-theme.css
+++ b/maven-default-skin/src/main/resources/css/maven-theme.css
@@ -98,6 +98,7 @@ p {
   margin: 10px 0 0 5px;
   border: 1px solid #999;
   background-color: #eee;
+  padding-bottom: 3px; /* IE-9 scrollbar-fix */
 }
 #navcolumn h5 {
   font-size: smaller;
